--- a/README.rdoc
+++ b/README.rdoc
@@ -1,43 +1,40 @@
 = itunes-receipt
 
-Handle iTunes In App Purchase Receipt Verification.
+A quickly hacked version of itunes-receipt that can be used for quickly dumping the raw response from Apple's IAP receipt validation servers, for debugging purposes
 
 == Installation
 
-  gem install itunes-receipt
+  gem install specific_install
+  gem specific_install -l https://github.com/joshavant/itunes-receipt
+
+Note: This will overwrite any previous installation of itunes-receipt
 
 == Usage
 
    require 'itunes/receipt'
-   
-   # pass Base64 encoded raw receipt data which you received from your iOS app
-   receipt = Itunes::Receipt.verify! 'ewoJInNpZ25hdHVyZSIgPSAi...'
-   receipt.product_id     # => 'com.example.products.100gems'
-   receipt.transaction_id # => '1234567890'
-    :
 
-See lib/itunes/receipt.rb for more attributes.
+   # if necessary...
+   Itunes.shared_secret = '...'
 
-If you want to accept iTunes sandbox receipts, do like this.
-With <code>allow_sandbox_receipt</code> option specified, this gem post given receipt data to iTunes production first, and when iTunes production tells it's sandbox receipt, re-send it to iTunes sandbox again automatically.
-Without this option, this gem just raises an exception.
+   # pass Base64 encoded raw receipt data which you received from your iOS app (non-sandbox)
+   response = Itunes::Receipt.verify! 'ewoJInNpZ25hdHVyZSIgPSAi...', false, true
+   # or, if you're using a sandbox receipt:
+   response = Itunes::Receipt.verify! 'ewoJInNpZ25hdHVyZSIgPSAi...', true, true
 
-  receipt = Itunes::Receipt.verify! 'ewoJInNpZ25hdHVyZSIgPSAi...', :allow_sandbox_receipt
-  receipt.sandbox? # => true/false
+<code>response</code> now contains the raw response object from Apple's server.
 
-If you want to accept ONLY iTunes sandbox receipts (in your stable server etc.), call <code>Itunes.sandbox!</code> somewhere before you call <code>Itunes::Receipt.verify!</code>.
-Then all verification call after that goes to iTunes sandbox, until you do <code>Itunes.sandbox = false</code>.
+You could now pretty print it, like so:
+   require 'pp'
+   pp receipt
 
-== Note on Patches/Pull Requests
+== Other documentation
 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+For the rest of the documentation for this gem, refer to the original fork. But, really, you really shouldn't make use of it in any other way than as described above.
+
+== Production Warning
+
+This is ONLY useful for quick, local, debugging purposes. Don't put this in production!!
 
 == Copyright
 
-Copyright (c) 2011 nov matake. See LICENSE for details.
+Copyright (c) 2014 nov matake + Josh Avant. See LICENSE for details.
